--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,12 @@ dependencies:
   http: ^0.13.4
 
 
-  # The following adds the Cupertino Icons font to your application.
+  # The following adds the Cupertino Icons font to your application.flu
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  json_serializable: ^6.3.1
+  build_runner: ^2.1.11
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
